<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_action_home"
        android:title="@string/main_menu_home" />

    <item
        android:id="@+id/nav_presupuestos"
        android:icon="@drawable/ic_action_presupuestos"
        android:title="@string/main_menu_presupuestos" />

    <item
        android:id="@+id/nav_turnos"
        android:icon="@drawable/ic_action_turnos"
        android:title="@string/main_menu_solicitados" />

    <item
        android:id="@+id/nav_trabajos"
        android:icon="@drawable/ic_action_trabajos"
        android:title="@string/main_menu_historial" />

    <item
        android:id="@+id/nav_edit"
        android:icon="@drawable/ic_action_edit"
        android:title="@string/main_menu_edit" />

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/main_menu_logout" />


    <!--<item-->
        <!--android:id="@+id/nav_configuracion"-->
        <!--android:icon="@drawable/ic_action_config"-->
        <!--android:title="@string/main_menu_configuracion" />-->
</menu>
